[tool.poetry]
name = "my-dl-library"
version = "0.1.0"
description = "my deep learning library"
authors = ["Snow0821 <sosaror@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
